RegExpSupport/testData/psi/gen/charclasses/test-95.regexp
a\p{<error descr="Character family name expected">*</error>}b